<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>one.microstream</groupId>
	<artifactId>cluster-storage-demo</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>${packaging}</packaging>

	<parent>
		<groupId>io.micronaut.platform</groupId>
		<artifactId>micronaut-parent</artifactId>
		<version>4.8.3</version>
	</parent>

	<properties>
		<packaging>jar</packaging>
		<jdk.version>21</jdk.version>
		<release.version>21</release.version>
		<micronaut.version>4.8.3</micronaut.version>
		<eclipsestore.version>3.1.0</eclipsestore.version>
		<lucene.version>10.3.2</lucene.version>
		<micronaut.aot.enabled>false</micronaut.aot.enabled>
		<micronaut.runtime>netty</micronaut.runtime>
		<exec.mainClass>one.microstream.demo.Application</exec.mainClass>
	</properties>

	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>
		<repository>
			<id>microstream-maven-ee</id>
			<url>https://repo.microstream.one/repository/ms-ee/</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-bom</artifactId>
				<version>2.24.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- GigaMap -->
		<dependency>
			<groupId>org.eclipse.store</groupId>
			<artifactId>gigamap</artifactId>
			<version>${eclipsestore.version}</version>
		</dependency>

		<!-- Lucene -->
		<dependency>
			<groupId>org.eclipse.store</groupId>
			<artifactId>gigamap-lucene</artifactId>
			<version>3.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-queryparser</artifactId>
			<version>${lucene.version}</version>
		</dependency>

		<!-- Nodelibrary -->
		<dependency>
			<groupId>org.eclipse.datagrid</groupId>
			<artifactId>cluster-nodelibrary-micronaut</artifactId>
			<version>1.17.2</version>
		</dependency>

		<!-- Eclipse Store -->
		<dependency>
			<groupId>io.micronaut.eclipsestore</groupId>
			<artifactId>micronaut-eclipsestore</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.eclipse.serializer</groupId>
					<artifactId>persistence-binary-jdk8</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.eclipse.serializer</groupId>
					<artifactId>persistence-binary-jdk17</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.micronaut.eclipsestore</groupId>
			<artifactId>micronaut-eclipsestore-annotations</artifactId>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- Micronaut -->
		<dependency>
			<groupId>io.micronaut</groupId>
			<artifactId>micronaut-http-server-netty</artifactId>
		</dependency>
		<dependency>
			<groupId>io.micronaut</groupId>
			<artifactId>micronaut-management</artifactId>
		</dependency>
		<dependency>
			<groupId>io.micronaut.serde</groupId>
			<artifactId>micronaut-serde-jackson</artifactId>
		</dependency>
		<dependency>
			<groupId>io.micronaut.validation</groupId>
			<artifactId>micronaut-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>jakarta.annotation</groupId>
			<artifactId>jakarta.annotation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>jakarta.validation</groupId>
			<artifactId>jakarta.validation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>io.micronaut.openapi</groupId>
			<artifactId>micronaut-openapi-annotations</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- Micronaut Test -->
		<dependency>
			<groupId>io.micronaut</groupId>
			<artifactId>micronaut-http-client</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.micronaut.test</groupId>
			<artifactId>micronaut-test-junit5</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>io.micronaut.maven</groupId>
				<artifactId>micronaut-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED</jvmArguments>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<useIncrementalCompilation>false</useIncrementalCompilation>

					<annotationProcessorPaths combine.children="append">
						<path>
							<groupId>io.micronaut</groupId>
							<artifactId>micronaut-http-validation</artifactId>
							<version>${micronaut.core.version}</version>
						</path>
						<path>
							<groupId>io.micronaut.eclipsestore</groupId>
							<artifactId>micronaut-eclipsestore-annotations</artifactId>
							<version>${micronaut.eclipsestore.version}</version>
							<exclusions>
								<exclusion>
									<groupId>io.micronaut</groupId>
									<artifactId>micronaut-inject</artifactId>
								</exclusion>
							</exclusions>
						</path>
						<path>
							<groupId>io.micronaut.openapi</groupId>
							<artifactId>micronaut-openapi</artifactId>
							<version>${micronaut.openapi.version}</version>
							<exclusions>
								<exclusion>
									<groupId>io.micronaut</groupId>
									<artifactId>micronaut-inject</artifactId>
								</exclusion>
							</exclusions>
						</path>
						<path>
							<groupId>io.micronaut.serde</groupId>
							<artifactId>micronaut-serde-processor</artifactId>
							<version>${micronaut.serialization.version}</version>
							<exclusions>
								<exclusion>
									<groupId>io.micronaut</groupId>
									<artifactId>micronaut-inject</artifactId>
								</exclusion>
							</exclusions>
						</path>
						<path>
							<groupId>io.micronaut.validation</groupId>
							<artifactId>micronaut-validation-processor</artifactId>
							<version>${micronaut.validation.version}</version>
							<exclusions>
								<exclusion>
									<groupId>io.micronaut</groupId>
									<artifactId>micronaut-inject</artifactId>
								</exclusion>
							</exclusions>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<arg>-Amicronaut.processing.group=one.microstream.demo</arg>
						<arg>-Amicronaut.processing.module=cluster-storage-demo</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
